--- a/dangxuat.html
+++ b/dangxuat.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Đăng xuất - ITShop.VN</title>
+	<title>Đăng xuất - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -16,6 +16,10 @@
 			<div class="card-header">Đăng xuất</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng chức năng <strong>Đăng xuất</strong>.</p>
+				<P>Khi người dùng nhấn vào nút "Đăng Xuất", hệ thống sẽ thực hiện các bước sau:</p>
+				<P>Kết thúc phiên làm việc: Hệ thống sẽ kết thúc phiên làm việc hiện tại của người dùng, đóng tất cả các tài nguyên và dữ liệu đang được sử dụng trong phiên làm việc.</p>
+				<p>Xóa thông tin phiên: Thông tin phiên (session information) của người dùng sẽ được xóa khỏi bộ nhớ tạm thời để đảm bảo rằng không ai có thể truy cập lại phiên làm việc cũ.</p>
+				<p>Chuyển hướng: Sau khi đăng xuất thành công, người dùng sẽ được chuyển hướng đến trang đăng nhập hoặc trang chủ của hệ thống, tuỳ thuộc vào thiết kế của hệ thống.</p>
 			</div>
 		</div>
 		
