--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Màn hình chính - ITShop.VN</title>
+	<title>Màn hình chính - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -16,7 +16,29 @@
 			<div class="card-header">Màn hình chính</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng <strong>Màn hình chính</strong>.</p>
-				<img src="images/home.png" class="img-fluid mx-auto d-block" />
+				<img src="images/home1.png" class="img-fluid mx-auto d-block" />
+				<h4>Hướng dẫn sử dụng màn hình chính</h4>
+				
+				<p>Giao Diện Chính
+Khi khởi động ứng dụng, bạn sẽ thấy giao diện chính với các thanh menu và biểu tượng chức năng. Các chức năng chính được sắp xếp theo từng danh mục trên thanh công cụ phía trên màn hình.</p>
+				<p>1. Hệ Thống</p>
+				<p>Đăng nhập: Chức năng này cho phép người dùng đăng nhập vào hệ thống để sử dụng các chức năng khác.</p>
+<p>Đăng xuất: Chức năng này cho phép người dùng đăng xuất khỏi hệ thống.</p>
+				<p>2. Quản Lý</p>
+				<p>Loại sách: Quản lý các loại sách có trong cửa hàng. Bạn có thể thêm, sửa hoặc xóa thông tin về các loại sách.</p>
+<p>Nhà sản xuất: Quản lý thông tin về các nhà sản xuất hoặc nhà xuất bản.</p>
+<p>Sách: Quản lý thông tin về các cuốn sách bao gồm thêm mới, chỉnh sửa hoặc xóa thông tin sách.</p>
+<p>Khách hàng: Quản lý thông tin khách hàng, giúp lưu trữ và cập nhật thông tin khách hàng.</p>
+<p>Nhân viên: Quản lý thông tin nhân viên làm việc trong cửa hàng.</p>
+<p>3. Báo Cáo - Thống Kê</p>
+<p>Hóa đơn: Xem và quản lý các hóa đơn bán hàng. Bạn có thể tìm kiếm, xem chi tiết và in hóa đơn.</p>
+<p>Thống kê sách: Xem báo cáo thống kê về số lượng sách bán ra, tồn kho, và các thông tin liên quan đến sách.</p>
+<p>Thống kê doanh thu: Xem báo cáo thống kê doanh thu theo ngày, tháng, năm hoặc theo các tiêu chí khác.</p>
+<p>4. Trợ Giúp</p>
+<p>Chức năng này cung cấp các tài liệu hướng dẫn, hỗ trợ người dùng trong quá trình sử dụng ứng dụng.</p>
+<p>Chức Năng Đặc Biệt</p>
+<p>Chưa đăng nhập: Khi chưa đăng nhập, ứng dụng sẽ hiển thị thông báo "Chưa đăng nhập" ở góc dưới bên trái. Bạn cần đăng nhập để sử dụng các chức năng khác của ứng dụng. Khi đăng nhập sẽ hiển thị tên tài khoản đăng nhập</p>
+<p>Thông tin bản quyền: Góc dưới bên phải hiển thị thông tin bản quyền của ứng dụng, thuộc về FIT (Khoa Công nghệ Thông tin).</p>
 			</div>
 		</div>
 		
