--- a/loaisanpham.html
+++ b/loaisanpham.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Loại sản phẩm - ITShop.VN</title>
+	<title>Thể loại sách - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -13,10 +13,40 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Loại sản phẩm</div>
+			<div class="card-header">Thể loại sách</div>
 			<div class="card-body">
-				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Loại sản phẩm</strong>.</p>
-				<img src="images/loaisanpham.png" class="img-fluid mx-auto d-block" />
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Thể loại sách</strong>.</p>
+				<img src="images/loaisach.png" class="img-fluid mx-auto d-block" />
+				<p>1. Thêm thể loại sách mới: Nhấp vào nút "Thêm".
+Nhập tên thể loại sách mới vào ô "Tên thể loại sách".
+Nhấp vào nút "Lưu" để lưu thể loại sách mới vào danh sách.</p>
+				<p>2. Sửa thể loại sách:
+
+Chọn thể loại sách cần sửa trong danh sách bằng cách nhấp vào dòng tương ứng.
+Nhấp vào nút "Sửa".
+Thay đổi tên thể loại sách trong ô "Tên thể loại sách".
+Nhấp vào nút "Lưu" để lưu thay đổi.</p>
+				<p>3. Xóa thể loại sách:
+
+Chọn thể loại sách cần xóa trong danh sách bằng cách nhấp vào dòng tương ứng.
+Nhấp vào nút "Xóa".
+Xác nhận xóa thể loại sách khi có hộp thoại xác nhận hiện ra.</p>
+				<p>4. Nhập dữ liệu từ file:
+
+Nhấp vào nút "Nhập...".
+Chọn file dữ liệu cần nhập.
+Thực hiện các bước theo hướng dẫn để nhập dữ liệu vào danh sách thể loại sách.</p>
+				<p>5. Xuất dữ liệu ra file:
+
+Nhấp vào nút "Xuất...".
+Chọn vị trí và định dạng file để lưu.
+Thực hiện các bước theo hướng dẫn để xuất dữ liệu từ danh sách thể loại sách.
+</p>
+				<p>6. Thoát ứng dụng:
+
+Nhấp vào nút "Thoát" để đóng ứng dụng.</p>
+<p>Các nút "Lưu" và "Hủy bỏ" sẽ hiển thị khi bạn thực hiện thao tác thêm hoặc sửa thể loại sách để lưu thay đổi hoặc hủy bỏ thao tác hiện tại.</p>
+				
 			</div>
 		</div>
 		
