--- a/dangnhap.html
+++ b/dangnhap.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Đăng nhập - ITShop.VN</title>
+	<title>Đăng nhập - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -16,7 +16,21 @@
 			<div class="card-header">Đăng nhập</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Đăng nhập</strong>.</p>
-				<img src="images/dangnhap.png" class="img-fluid mx-auto d-block" />
+				<img src="images/dangnhap1.png" class="img-fluid mx-auto d-block" />
+				<h4>Hướng dẫn sử dụng màn hình đăng nhập</h4>
+				
+				<p>1. Mở giao diện đăng nhập: Truy cập nút đăng nhập nơi xuất hiện giao diện đăng nhập này.</p>
+				<p>2. Nhập tên đăng nhập: Tại ô có nhãn "Tên đăng nhập", bạn hãy nhập tên đăng nhập của mình. Đây có thể là email hoặc tên tài khoản mà bạn đã đăng ký.</p>
+				<p>3. Nhập mật khẩu: Tại ô có nhãn "Mật khẩu", bạn hãy nhập mật khẩu tương ứng với tên đăng nhập của mình. Đảm bảo rằng bạn nhập chính xác ký tự viết hoa, viết thường, số và ký tự đặc biệt (nếu có).</p>
+				<p>4. Nhập mật khẩu:
+
+Tại ô có nhãn "Mật khẩu", bạn hãy nhập mật khẩu tương ứng với tên đăng nhập của mình. Đảm bảo rằng bạn nhập chính xác ký tự viết hoa, viết thường, số và ký tự đặc biệt (nếu có).
+Đăng nhập:
+
+Sau khi nhập đầy đủ tên đăng nhập và mật khẩu, nhấn vào nút "Đăng nhập" để truy cập vào hệ thống.</p>
+<p>5. Huỷ bỏ (nếu cần):
+
+Nếu bạn muốn hủy bỏ việc đăng nhập hoặc làm mới các ô nhập liệu, hãy nhấn vào nút "Huỷ bỏ".</p>
 			</div>
 		</div>
 		
