--- a/hangsanxuat.html
+++ b/hangsanxuat.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Hãng sản xuất - ITShop.VN</title>
+	<title>Nhà sản xuất - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -13,10 +13,10 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Hãng sản xuất</div>
+			<div class="card-header">Nhà sản xuất</div>
 			<div class="card-body">
-				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Hãng sản xuất</strong>.</p>
-				<img src="images/hangsanxuat.png" class="img-fluid mx-auto d-block" />
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Nhà sản xuất</strong>.</p>
+				<img src="images/nhasanxuat.png" class="img-fluid mx-auto d-block" />
 			</div>
 		</div>
 		
