--- a/hoadonbanhang.html
+++ b/hoadonbanhang.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Hóa đơn bán hàng - ITShop.VN</title>
+	<title>Hóa đơn bán sách - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -13,10 +13,10 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Hóa đơn bán hàng</div>
+			<div class="card-header">Hóa đơn bán sách</div>
 			<div class="card-body">
-				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Hóa đơn bán hàng</strong>.</p>
-				<img src="images/hoadonbanhang.png" class="img-fluid mx-auto d-block" />
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Hóa đơn bán sách </strong>.</p>
+				<img src="images/hoadon.png" class="img-fluid mx-auto d-block" />
 			</div>
 		</div>
 		
