--- a/navbar.html
+++ b/navbar.html
@@ -26,14 +26,14 @@
 						Quản lý
 					</a>
 					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="loaisanpham.html">Loại sản phẩm</a></li>
-						<li><a class="dropdown-item" href="hangsanxuat.html">Hãng sản xuất</a></li>
-						<li><a class="dropdown-item" href="sanpham.html">Sản phẩm</a></li>
+						<li><a class="dropdown-item" href="loaisanpham.html">Thẻ loại sách</a></li>
+						<li><a class="dropdown-item" href="hangsanxuat.html">Nhà sản xuất</a></li>
+						<li><a class="dropdown-item" href="sanpham.html">Sách</a></li>
 						<li><hr class="dropdown-divider"></li>
 						<li><a class="dropdown-item" href="khachhang.html">Khách hàng</a></li>
 						<li><a class="dropdown-item" href="nhanvien.html">Nhân viên</a></li>
 						<li><hr class="dropdown-divider"></li>
-						<li><a class="dropdown-item" href="hoadonbanhang.html">Hóa đơn bán hàng</a></li>
+						<li><a class="dropdown-item" href="hoadonbanhang.html">Hóa đơn bán sách</a></li>
 					</ul>
 				</li>
 				<li class="nav-item dropdown">
@@ -41,7 +41,7 @@
 						Báo cáo - Thống kê
 					</a>
 					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="thongkesanpham.html">Thống kê sản phẩm</a></li>
+						<li><a class="dropdown-item" href="thongkesanpham.html">Thống kê sách</a></li>
 						<li><a class="dropdown-item" href="thongkedoanhthu.html">Thống kê doanh thu</a></li>
 					</ul>
 				</li>
