--- a/nhanvien.html
+++ b/nhanvien.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Nhân viên - ITShop.VN</title>
+	<title>Nhân viên - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 			<div class="card-header">Nhân viên</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Nhân viên</strong>.</p>
-				<img src="images/nhanvien.png" class="img-fluid mx-auto d-block" />
+				<img src="images/nhanvien1.png" class="img-fluid mx-auto d-block" />
 			</div>
 		</div>
 		
