--- a/sanpham.html
+++ b/sanpham.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Sản phẩm - ITShop.VN</title>
+	<title>Sách - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -13,10 +13,11 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Sản phẩm</div>
+			<div class="card-header">Sách</div>
 			<div class="card-body">
-				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Sản phẩm</strong>.</p>
-				<img src="images/sanpham.png" class="img-fluid mx-auto d-block" />
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Sách</strong>.</p>
+				<img src="images/sach.png" class="img-fluid mx-auto d-block" />
+				
 			</div>
 		</div>
 		
