--- a/thoatchuongtrinh.html
+++ b/thoatchuongtrinh.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Thoát chương trình - ITShop.VN</title>
+	<title>Thoát chương trình - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -16,6 +16,7 @@
 			<div class="card-header">Thoát chương trình</div>
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng chức năng <strong>Thoát chương trình</strong>.</p>
+				<p>Khi người dùng nhấn vào nút "Thoát", hệ thống sẽ đóng toàn bộ cửa sổ và tiến trình liên quán đến ứng dụng.</p>
 			</div>
 		</div>
 		
