--- a/thongkesanpham.html
+++ b/thongkesanpham.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<title>Thống kê sản phẩm - ITShop.VN</title>
+	<title>Thống kê sách - BOOKSTORE.VN</title>
 </head>
 
 <body>
@@ -13,10 +13,10 @@
 		<div id="navbar"></div>
 		
 		<div class="card mt-3">
-			<div class="card-header">Thống kê sản phẩm</div>
+			<div class="card-header">Thống kê sách</div>
 			<div class="card-body">
-				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Thống kê sản phẩm</strong>.</p>
-				<img src="images/thongkesanpham.png" class="img-fluid mx-auto d-block" />
+				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Thống kê sách</strong>.</p>
+				<img src="images/thongkesanpham1.png" class="img-fluid mx-auto d-block" />
 			</div>
 		</div>
 		
