--- a/khachhang.html
+++ b/khachhang.html
@@ -17,6 +17,26 @@
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Khách hàng</strong>.</p>
 				<img src="images/khachhang1.png" class="img-fluid mx-auto d-block" />
+				<p>1. Thêm Khách hàng Mới: Nhập họ và tên, số điện thoại, và địa chỉ của khách hàng mới vào các trường tương ứng. Nhấn "Thêm" để thêm khách hàng mới vào danh sách.
+</p>
+				<p>2. Chỉnh Sửa Thông Tin Khách hàng:
+
+Chọn khách hàng cần chỉnh sửa từ danh sách khách hàng. Thông tin khách hàng sẽ hiển thị ở phần Thông tin khách hàng. Chỉnh sửa các thông tin cần thiết và nhấn "Lưu".</p>
+				<p>3. Xóa Khách hàng:
+
+Chọn khách hàng cần xóa từ danh sách khách hàng. Nhấn "Xóa" để xóa khách hàng khỏi danh sách.</p>
+				<p>4. Tìm Kiếm và Lọc Khách hàng:
+
+Nhấn "Lọc" và nhập các tiêu chí tìm kiếm hoặc lọc (như tên, số điện thoại, địa chỉ). Nhấn "Lọc" để tìm kiếm và lọc danh sách khách hàng theo các tiêu chí đã nhập.</p>
+				<p>5. Nhập/Xuất Dữ liệu
+
+Để nhập dữ liệu từ tệp, nhấn "Nhập…" và chọn tệp cần nhập.
+Để xuất dữ liệu ra tệp, nhấn "Xuất…" và chọn định dạng và vị trí lưu tệp.
+</p>
+				<p>6. Thoát ứng dụng:
+
+Nhấp vào nút "Thoát" để đóng ứng dụng.</p>
+<p>Các nút "Lưu" và "Hủy bỏ" sẽ hiển thị khi bạn thực hiện thao tác thêm hoặc sửa thể loại sách để lưu thay đổi hoặc hủy bỏ thao tác hiện tại.</p>
 			</div>
 		</div>
 		
