--- a/thongkedoanhthu.html
+++ b/thongkedoanhthu.html
@@ -17,6 +17,14 @@
 			<div class="card-body">
 				<p class="card-text">Hướng dẫn sử dụng màn hình <strong>Thống kê doanh thu</strong>.</p>
 				<img src="images/thongkedoanhthu1.png" class="img-fluid mx-auto d-block" />
+				<h4>Hướng dẫn sử dụng thống kê doanh thu</h4>
+				
+				<p>1. Chọn khoảng thời gian cần thống kê: Ở phía trên của giao diện, có hai ô nhập liệu với nhãn là "Từ ngày:" và "Đến ngày:". Bạn cần nhập khoảng thời gian mà bạn muốn xem báo cáo doanh thu. Ví dụ: từ ngày 01/01/2024 đến ngày 25/05/2024.</p>
+				<p>Bạn có thể sử dụng biểu tượng lịch (calendar icon) bên cạnh ô nhập liệu để chọn ngày dễ dàng hơn.</p>
+				<p>2. Lọc kết quả: Sau khi chọn khoảng thời gian mong muốn, nhấn nút "Lọc kết quả" để hiển thị báo cáo doanh thu trong khoảng thời gian đã chọn.</p>
+				<p>3. Hiện tất cả:: Nếu bạn muốn xem toàn bộ báo cáo mà không lọc theo bất kỳ khoảng thời gian nào, bạn có thể nhấn nút "Hiện tất cả".</p>
+
+				
 			</div>
 		</div>
 		
